<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="a11y_user_photo">user photo</string>
    <string name="a11y_user_name">user name</string>
    <string name="search_hint">search repositories</string>
    <string name="repo_full_name"><b>%s</b>/%s</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="a11y_contributor_avatar">contributor avatar</string>
    <string name="about">About My App</string>
    <string name="select_image">Resim Seç</string>
    <string name="txt_go_user_activity">Go User Activity</string>
    <string name="txt_show_notif">Show Notif</string>
    <string name="txt_repeat_again">Tekrar Dene</string>



    <string name="nav_item1">Item 1</string>
    <string name="nav_item2">Item 2</string>
    <string name="nav_item3">Item 3</string>
    <string name="nav_item4">Item 4</string>
    <string name="nav_item5">Item 5</string>
    <string name="nav_item6">Item 6</string>
    <string name="nav_item7">Item 7</string>
    <string name="nav_item8">Item 8</string>
    <string name="nav_item9">Item 9</string>
    <string name="nav_item10">Item 10</string>
    <string name="nav_item11">Item 11</string>
    <string name="nav_item12">Item 12</string>
    <string name="nav_item13">Item 13</string>
</resources>
